세부 게시글 접근 완료, 이미지 표시 수정

--- a/src/main/resources/templates/board/detail.html
+++ b/src/main/resources/templates/board/detail.html
@@ -567,7 +567,7 @@
 
             <!-- 댓글이 없을 때 -->
             <p
-              th:if="${#lists.isEmpty(comments)}"
+              th:if="${#lists.isEmpty(comment)}"
               style="font-size: 14px; color: var(--muted)"
             >
               아직 등록된 댓글이 없습니다. 첫 댓글을 남겨보세요!
