--- a/src/main/resources/templates/header/like.html
+++ b/src/main/resources/templates/header/like.html
@@ -479,17 +479,17 @@
             <div class="board-row" th:each="post : ${posts}">
               <div class="col-title">
                 <a
-                  th:href="@{/post/{id}(id=${post.id})}"
+                  th:href="@{/post/{id}(id=${post.board_id})}"
                   th:text="${post.title}"
                 >
                   [잡담] 글 제목…
                 </a>
               </div>
               <div class="col-nick" th:text="${post.nickname}">닉네임</div>
-              <div class="col-views" th:text="${post.viewCount}">30</div>
+              <div class="col-views" th:text="${post.view_count}">30</div>
               <div
                 class="col-date"
-                th:text="${#temporals.format(post.createdAt, 'MM/dd')}"
+                th:text="${#temporals.format(post.reg_date, 'MM/dd')}"
               >
                 11/01
               </div>
