--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -510,7 +510,7 @@
               <a
                 class="page-link"
                 th:if="${page != null and page.hasPrevious()}"
-                th:href="@{/board/free(page=${page.number - 1}, size=${page.size})}"
+                th:href="@{/board/{boardType}(boardType=${boardType}, page=${page.number - 1}, size=${page.size})}"
               >
                 이전
               </a>
@@ -518,7 +518,7 @@
                 <!-- 0 ~ totalPages-1 까지 돌면서 번호 출력 -->
                 <a
                   th:each="i : ${#numbers.sequence(0, page.totalPages - 1)}"
-                  th:href="@{/board/free(page=${i}, size=${page.size})}"
+                  th:href="@{/board/{boardType}(boardType=${boardType}, page=${i}, size=${page.size})}"
                   th:text="${i + 1}"
                   class="page-link"
                   th:classappend="${i} == ${page.number} ? ' active'"
@@ -529,7 +529,7 @@
               <a
                 class="page-link"
                 th:if="${page != null and page.hasNext()}"
-                th:href="@{/board/free(page=${page.number + 1}, size=${page.size})}"
+                th:href="@{/board/{boardType}(boardType=${boardType}, page=${page.number + 1}, size=${page.size})}"
               >
                 다음
               </a>
