--- a/src/main/resources/templates/header/like.html
+++ b/src/main/resources/templates/header/like.html
@@ -472,7 +472,7 @@
             <div class="board-row" th:each="post : ${posts}">
               <div class="col-title">
                 <a
-                  th:href="@{/post/{id}(id=${post.board_id})}"
+                  th:href="@{/board/detail/{id}(id=${post.board_id})}"
                   th:text="${post.title}"
                 >
                   [잡담] 글 제목…
