--- a/src/main/resources/templates/header/listall.html
+++ b/src/main/resources/templates/header/listall.html
@@ -504,7 +504,7 @@
               <a
                 class="page-link"
                 th:if="${page.hasPrevious()}"
-                th:href="@{/board/free(page=${page.number - 1}, size=${page.size})}"
+                th:href="@{/header/listall(page=${page.number - 1}, size=${page.size})}"
               >
                 이전
               </a>
@@ -512,7 +512,7 @@
                 <!-- 0 ~ totalPages-1 까지 돌면서 번호 출력 -->
                 <a
                   th:each="i : ${#numbers.sequence(0, page.totalPages - 1)}"
-                  th:href="@{/board/free(page=${i}, size=${page.size})}"
+                  th:href="@{/header/listall(page=${i}, size=${page.size})}"
                   th:text="${i + 1}"
                   class="page-link"
                   th:classappend="${i} == ${page.number} ? ' active'"
@@ -523,14 +523,12 @@
               <a
                 class="page-link"
                 th:if="${page.hasNext()}"
-                th:href="@{/board/free(page=${page.number + 1}, size=${page.size})}"
+                th:href="@{/header/listall(page=${page.number + 1}, size=${page.size})}"
               >
                 다음
               </a>
             </div>
-
-            <a class="btn-write" th:href="@{/post/new}">글쓰기</a>
-          </div>
+           </div>
         </section>
       </main>
 
