search 페이지에서 세부 게시글로 이동 가능하게

--- a/src/main/resources/templates/header/search.html
+++ b/src/main/resources/templates/header/search.html
@@ -535,7 +535,7 @@
               </div>
 
               <h3 class="result-title">
-                  <a th:href="@{/post/{id}(id=${r.boardId})}" th:text="${r.title}">
+                  <a th:href="@{/board/detail/{id}(id=${r.boardId})}" th:text="${r.title}">
                       게시글 제목
                   </a>
               </h3>
