공감 신고 제목 표시

--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -227,6 +227,9 @@
           text-align: center;
         }
 
+        .col-title .title-text {
+          font-weight: 600;
+        }
 
 
         /* 공감/신고는 왼쪽 정렬 */
